1.added a html5 date view for invoice dates in create and update invoice. 2.solve issue of after update invoice status it's not showing updated in list of invoices in list page 3.added mobile validation for gstin register mobile number.

--- a/src/app/additional-components/input/input.component.css
+++ b/src/app/additional-components/input/input.component.css
@@ -8,3 +8,7 @@
     background: #63b12d;
     cursor: pointer;
 }
+
+input[type="date"] {
+	padding: 8px 14px;
+}
